kubernetes/nginx/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: nginx
  name: nginx
  namespace: suricata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      annotations:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          command: ["nginx"]
          args:
            - -g
            - daemon off;
          image: nginx

          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443

          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              cpu: 1
              memory: 500Mi

          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3

          securityContext:
            allowPrivilegeEscalation: false
          #   capabilities:
          #     drop:
          #     - ALL
          #   runAsNonRoot: true

          volumeMounts:
            - mountPath: /static
              name: scirius-static
              readOnly: true
            - mountPath: /etc/nginx/conf.d/default.conf
              name: nginx-default-conf
              readOnly: true
              subPath: default.conf
            - mountPath: /etc/nginx/conf.d/selks6.conf
              name: nginx-selks-conf
              readOnly: true
              subPath: selks6.conf
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-server-conf
              readOnly: true
              subPath: nginx.conf
            - mountPath: /etc/nginx/ssl
              name: nginx-tls
              readOnly: true

      restartPolicy: Always
      volumes:
        - name: scirius-static
          persistentVolumeClaim:
            claimName: scirius-static
            readOnly: true
        - name: nginx-tls
          secret:
            secretName: nginx-tls
            defaultMode: 0440
        - name: nginx-default-conf
          configMap:
            name: nginx-configmap
            items:
              - key: default.conf
                path: default.conf
                mode: 0440
        - name: nginx-server-conf
          configMap:
            name: nginx-configmap
            items:
              - key: nginx.conf
                path: nginx.conf
                mode: 0440
        - name: nginx-selks-conf
          configMap:
            name: nginx-configmap
            items:
              - key: selks6.conf
                path: selks6.conf
                mode: 0440
