kubernetes/nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: nginx
  name: nginx
  namespace: suricata
spec:
  ports:
    - name: "https"
      port: 443
      targetPort: 443
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: NodePort
